<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_tcp_endpoint</name>
  <version>0.7.0</version>
  <description>ROS TCP Endpoint Unity Integration (ROS2 version - c++)
  Acts as the bridge between Unity messages sent via TCP socket and ROS messages.
  </description>
  <author email="unity-robotics@unity3d.com">Unity Robotics</author>
  <author email="sebastien.thomas@inria.fr">Sebastien THOMAS</author>
  <maintainer email="sebastien.thomas@inria.fr">Sebastien THOMAS</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
